[project]
name = "telehealth-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "ariadne>=1.0.0",
    "celery>=5.6.2",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "fastapi-mail>=1.6.2",
    "flower>=2.0.1",
    "grpcio-tools>=1.78.0",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "reportlab>=4.4.10",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "strawberry-graphql>=0.312.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
